--- a/pom.xml
+++ b/pom.xml
@@ -40,6 +40,13 @@
             <version>1.7.25</version>
         </dependency>
 
+        <!--反射框架-->
+        <dependency>
+            <groupId>org.reflections</groupId>
+            <artifactId>reflections</artifactId>
+            <version>0.9.11</version>
+        </dependency>
+
     </dependencies>
 
 </project>
